versions/GNDS-v2.0/GNDS/c/src/v2.0/top/ReactionSuite.h

// --- Const-aware handles.
typedef const struct ReactionSuiteClass *const ConstHandle2ConstReactionSuite;
typedef       struct ReactionSuiteClass *const ConstHandle2ReactionSuite;
// +++ Set
extern_c void
ReactionSuiteProjectileFrameSet(ConstHandle2ReactionSuite self, const char *const projectileFrame);
// -----------------------------------------------------------------------------
// Metadatum: interaction
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteInteractionHas(ConstHandle2ConstReactionSuite self);
// +++ Get
// +++ Returns by value
extern_c const char *
ReactionSuiteInteractionGet(ConstHandle2ConstReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteInteractionSet(ConstHandle2ReactionSuite self, const char *const interaction);
// -----------------------------------------------------------------------------
// Child: styles
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteStylesHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstStyles
ReactionSuiteStylesGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2Styles
ReactionSuiteStylesGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteStylesSet(ConstHandle2ReactionSuite self, ConstHandle2ConstStyles styles);
// -----------------------------------------------------------------------------
// Child: PoPs
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuitePoPsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstPoPs
ReactionSuitePoPsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2PoPs
ReactionSuitePoPsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuitePoPsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstPoPs PoPs);
// -----------------------------------------------------------------------------
// Child: reactions
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteReactionsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstReactions
ReactionSuiteReactionsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2Reactions
ReactionSuiteReactionsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteReactionsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstReactions reactions);
// -----------------------------------------------------------------------------
// Child: applicationData
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteApplicationDataHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstApplicationData
ReactionSuiteApplicationDataGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2ApplicationData
ReactionSuiteApplicationDataGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteApplicationDataSet(ConstHandle2ReactionSuite self, ConstHandle2ConstApplicationData applicationData);
// -----------------------------------------------------------------------------
// Child: externalFiles
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteExternalFilesHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstExternalFiles
ReactionSuiteExternalFilesGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2ExternalFiles
ReactionSuiteExternalFilesGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteExternalFilesSet(ConstHandle2ReactionSuite self, ConstHandle2ConstExternalFiles externalFiles);
// -----------------------------------------------------------------------------
// Child: resonances
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteResonancesHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstResonances
ReactionSuiteResonancesGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2Resonances
ReactionSuiteResonancesGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteResonancesSet(ConstHandle2ReactionSuite self, ConstHandle2ConstResonances resonances);
// -----------------------------------------------------------------------------
// Child: sums
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteSumsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstSums
ReactionSuiteSumsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2Sums
ReactionSuiteSumsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteSumsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstSums sums);
// -----------------------------------------------------------------------------
// Child: productions
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ReactionSuiteProductionsHas(ConstHandle2ConstReactionSuite self);
// --- Get, const
extern_c Handle2ConstProductions
ReactionSuiteProductionsGetConst(ConstHandle2ConstReactionSuite self);
// +++ Get
extern_c Handle2Productions
ReactionSuiteProductionsGet(ConstHandle2ReactionSuite self);
// +++ Set
extern_c void
ReactionSuiteProductionsSet(ConstHandle2ReactionSuite self, ConstHandle2ConstProductions productions);