versions/GNDS-v2.0/GNDS/fortran/src/v2.0/top/ReactionSuite.f03


!! Set
subroutine ReactionSuiteProjectileFrameSet(handle, projectileFrame, projectileFrameSize) &
      bind(C, name='ReactionSuiteProjectileFrameSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: projectileFrameSize
   character(c_char), intent(in) :: projectileFrame(projectileFrameSize)
end subroutine ReactionSuiteProjectileFrameSet


!! -----------------------------------------------------------------------------
!! Metadatum: interaction
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteInteractionHas(handle) &
      bind(C, name='ReactionSuiteInteractionHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteInteractionHas

!! Get
function ReactionSuiteInteractionGet(handle) &
      bind(C, name='ReactionSuiteInteractionGet') &
      result(interaction)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: interaction
end function ReactionSuiteInteractionGet

!! Set
subroutine ReactionSuiteInteractionSet(handle, interaction, interactionSize) &
      bind(C, name='ReactionSuiteInteractionSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: interactionSize
   character(c_char), intent(in) :: interaction(interactionSize)
end subroutine ReactionSuiteInteractionSet


!! -----------------------------------------------------------------------------
!! Child: styles
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteStylesHas(handle) &
      bind(C, name='ReactionSuiteStylesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteStylesHas

!! Get, const
function ReactionSuiteStylesGetConst(handle) &
      bind(C, name='ReactionSuiteStylesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteStylesGetConst

!! Get
function ReactionSuiteStylesGet(handle) &
      bind(C, name='ReactionSuiteStylesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteStylesGet

!! Set
subroutine ReactionSuiteStylesSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteStylesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteStylesSet


!! -----------------------------------------------------------------------------
!! Child: PoPs
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuitePoPsHas(handle) &
      bind(C, name='ReactionSuitePoPsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuitePoPsHas

!! Get, const
function ReactionSuitePoPsGetConst(handle) &
      bind(C, name='ReactionSuitePoPsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuitePoPsGetConst

!! Get
function ReactionSuitePoPsGet(handle) &
      bind(C, name='ReactionSuitePoPsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuitePoPsGet

!! Set
subroutine ReactionSuitePoPsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuitePoPsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuitePoPsSet


!! -----------------------------------------------------------------------------
!! Child: reactions
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteReactionsHas(handle) &
      bind(C, name='ReactionSuiteReactionsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteReactionsHas

!! Get, const
function ReactionSuiteReactionsGetConst(handle) &
      bind(C, name='ReactionSuiteReactionsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteReactionsGetConst

!! Get
function ReactionSuiteReactionsGet(handle) &
      bind(C, name='ReactionSuiteReactionsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteReactionsGet

!! Set
subroutine ReactionSuiteReactionsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteReactionsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteReactionsSet


!! -----------------------------------------------------------------------------
!! Child: applicationData
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteApplicationDataHas(handle) &
      bind(C, name='ReactionSuiteApplicationDataHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteApplicationDataHas

!! Get, const
function ReactionSuiteApplicationDataGetConst(handle) &
      bind(C, name='ReactionSuiteApplicationDataGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteApplicationDataGetConst

!! Get
function ReactionSuiteApplicationDataGet(handle) &
      bind(C, name='ReactionSuiteApplicationDataGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteApplicationDataGet

!! Set
subroutine ReactionSuiteApplicationDataSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteApplicationDataSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteApplicationDataSet


!! -----------------------------------------------------------------------------
!! Child: externalFiles
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteExternalFilesHas(handle) &
      bind(C, name='ReactionSuiteExternalFilesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteExternalFilesHas

!! Get, const
function ReactionSuiteExternalFilesGetConst(handle) &
      bind(C, name='ReactionSuiteExternalFilesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteExternalFilesGetConst

!! Get
function ReactionSuiteExternalFilesGet(handle) &
      bind(C, name='ReactionSuiteExternalFilesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteExternalFilesGet

!! Set
subroutine ReactionSuiteExternalFilesSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteExternalFilesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteExternalFilesSet


!! -----------------------------------------------------------------------------
!! Child: resonances
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteResonancesHas(handle) &
      bind(C, name='ReactionSuiteResonancesHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteResonancesHas

!! Get, const
function ReactionSuiteResonancesGetConst(handle) &
      bind(C, name='ReactionSuiteResonancesGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteResonancesGetConst

!! Get
function ReactionSuiteResonancesGet(handle) &
      bind(C, name='ReactionSuiteResonancesGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteResonancesGet

!! Set
subroutine ReactionSuiteResonancesSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteResonancesSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteResonancesSet


!! -----------------------------------------------------------------------------
!! Child: sums
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteSumsHas(handle) &
      bind(C, name='ReactionSuiteSumsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteSumsHas

!! Get, const
function ReactionSuiteSumsGetConst(handle) &
      bind(C, name='ReactionSuiteSumsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteSumsGetConst

!! Get
function ReactionSuiteSumsGet(handle) &
      bind(C, name='ReactionSuiteSumsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteSumsGet

!! Set
subroutine ReactionSuiteSumsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteSumsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteSumsSet


!! -----------------------------------------------------------------------------
!! Child: productions
!! -----------------------------------------------------------------------------

!! Has
function ReactionSuiteProductionsHas(handle) &
      bind(C, name='ReactionSuiteProductionsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function ReactionSuiteProductionsHas

!! Get, const
function ReactionSuiteProductionsGetConst(handle) &
      bind(C, name='ReactionSuiteProductionsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteProductionsGetConst

!! Get
function ReactionSuiteProductionsGet(handle) &
      bind(C, name='ReactionSuiteProductionsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function ReactionSuiteProductionsGet

!! Set
subroutine ReactionSuiteProductionsSet(handle, fieldHandle) &
      bind(C, name='ReactionSuiteProductionsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine ReactionSuiteProductionsSet

